# kiyoshi-music

./: .gitignore  ANLEITUNG.md  CHANGELOG.md  CLAUDE.md  README.md  crowdin.yml  index.html  package-lock.json  package.json  server.py  start-vite.bat  style.css  vite.config.js
.github/workflows/: release.yml  update-latest-json.yml
changelog/: index.html
download/: index.html
js/: releases.js
python-backend/: build_server.bat  kiyoshi-server-x86_64-pc-windows-msvc.spec  kiyoshi-server-x86_64-unknown-linux-gnu.spec  requirements.txt  server.py  setup_auth.py  setup_firefox.py  setup_manual.py  setup_oauth.py
python-backend/custom_lyrics/: Cn9N82ALZus.ttml  UsjsYMo3O1Q.lrc  hRQ_8nIRxMM.ttml  m1-HQfzUGqA.ttml
src/: App.css  App.jsx  api.js  i18n.js  icons.jsx  index.css  main.js  main.jsx  player.js  runtime.js  views.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  sidecar.json
src-tauri/src/: discord.rs  main.rs  obs.rs  server.rs  window.rs
src-tauri/src/audio/: decoder.rs  mod.rs  player.rs
src-tauri/windows/: hooks.nsh
src/components/: GenreBar.jsx  MusicCard.jsx  Player.jsx  Sidebar.jsx  TrackRow.jsx
src/locales/: cs.json  de-DE.json  de.json  en.json  es-ES.json  es-MX.json  es.json  fr.json  it.json  ja.json  ko.json  languages.json  nl.json  pl.json  pt.json  sv.json  tok.json  uk.json
src/views/: HomeView.jsx  LibraryView.jsx  LikedSongsView.jsx
updates/: latest.json
